; ModuleID = '/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_format_active_state.c'
source_filename = "/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_format_active_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"failed\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"active\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"reloading\00", align 1
@.str.3 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8**, i8**)* @format_active_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @format_active_state(i8* %0, i8** %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  store i8* %0, i8** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i64 @streq_ptr(i8* %7, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = call i8* (...) @ansi_highlight_red()
  %12 = load i8**, i8*** %5, align 8
  store i8* %11, i8** %12, align 8
  %13 = call i8* (...) @ansi_normal()
  %14 = load i8**, i8*** %6, align 8
  store i8* %13, i8** %14, align 8
  br label %28

15:                                               ; preds = %3
  %16 = load i8*, i8** %4, align 8
  %17 = call i64 @STRPTR_IN_SET(i8* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %15
  %20 = call i8* (...) @ansi_highlight_green()
  %21 = load i8**, i8*** %5, align 8
  store i8* %20, i8** %21, align 8
  %22 = call i8* (...) @ansi_normal()
  %23 = load i8**, i8*** %6, align 8
  store i8* %22, i8** %23, align 8
  br label %27

24:                                               ; preds = %15
  %25 = load i8**, i8*** %6, align 8
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.3, i64 0, i64 0), i8** %25, align 8
  %26 = load i8**, i8*** %5, align 8
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.3, i64 0, i64 0), i8** %26, align 8
  br label %27

27:                                               ; preds = %24, %19
  br label %28

28:                                               ; preds = %27, %10
  ret void
}

declare dso_local i64 @streq_ptr(i8*, i8*) #1

declare dso_local i8* @ansi_highlight_red(...) #1

declare dso_local i8* @ansi_normal(...) #1

declare dso_local i64 @STRPTR_IN_SET(i8*, i8*, i8*) #1

declare dso_local i8* @ansi_highlight_green(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
